--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/tinker": "~1.0",
         "maatwebsite/excel": "^2.1",
         "overtrue/laravel-wechat": "~3.0",
-        "stevenyangecho/laravel-u-editor": "^1.4"
+        "stevenyangecho/laravel-u-editor": "^1.4",
+        "zgldh/qiniu-laravel-storage": "^0.9.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
